@@ -2,6 +2,10 @@
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
 # $Header: /var/cvsroot/gentoo-x86/sci-libs/lapack-reference/ChangeLog,v 1.51 2010/10/02 20:49:51 grobian Exp $
 
+  06 Oct 2014; Justin Lecher <jlec@gentoo.org> lapack-reference-9999.ebuild,
+  metadata.xml:
+  respect flags
+
   25 Sep 2014; François Bissey <francois.bissey@canterbury.ac.nz>
   lapack-reference-9999.ebuild:
   The dependency needs to be on xblas[fortran] otherwise libxblas won't have the
